fix grid spacing

--- a/src/components/CharacterTile/_CharacterTile.scss
+++ b/src/components/CharacterTile/_CharacterTile.scss
@@ -1,12 +1,9 @@
 .character-tile-component {
+  margin-bottom: $layout-02;
   height: 12rem;
   line-height: 1.125rem;
   border-radius: 4px;
   box-shadow: 0 2px 1px -1px rgba(0,0,0,0.2), 0 1px 1px 0px rgba(0,0,0,0.14), 0 1px 3px 0px rgba(0,0,0,0.12);
-
-  @media only screen and (max-width: 672px) {
-    border-radius: 0;
-  }
 
   .character-tile-header {
     display: flex;
