--- a/src/pages/Characters/_Characters.scss
+++ b/src/pages/Characters/_Characters.scss
@@ -1,7 +1,3 @@
 .characters {
   margin-top: $layout-05;
-
-  .new-character-btn {
-    margin-top: $layout-02;
-  }
 }
